--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ PUBLIC_URL=http://localhost:4000
 # Настройки Telegram
 BOT_TOKEN=7744240095:AAF6POcts7rFwACygJeGLskrPSM4x3N4zKY
 CRYPTO_PAY_API_TOKEN=291466:AAk54DKW8Zh9e7XhOi7ccQe2tDjb4yTE6Hg
-WEBHOOK_DOMAIN=https://gifts-frontend-nine.vercel.app/
+WEBHOOK_DOMAIN=https://giftsapp-shop.vercel.app/
 WEBHOOK_PATH=/api/telegram/webhook
 WEBAPP_URL=http://localhost:3000
 SERVER_URL=http://localhost:4000
